k8s/ingress/shadow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-shadow
  namespace: fraud-detection
  annotations:
    # TODO chapitre 2 : ajouter les annotations de mirroring vers le service challenger.
spec:
  ingressClassName: nginx
  rules:
    - host: fraud.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fraud-stable
                port:
                  number: 80
